--- a/src/views/components/template.html
+++ b/src/views/components/template.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/assets/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <title>Document</title>
 </head>
 <body>
-    {% include "navbar.html" %}
+    {% include "components/navbar.html" %}
     <div class="container">
         {% block body %} {% endblock %}
     </div>
