--- a/src/views/components/template.html
+++ b/src/views/components/template.html
@@ -13,5 +13,8 @@
     <div class="container">
         {% block body %} {% endblock %}
     </div>
+    <script src="/assets/scripts/jquery-3.4.1.slim.min.js"></script>
+    <script src="/assets/scripts/popper.min.js"></script>
+    <script src="/assets/scripts/bootstrap.min.js"></script>
 </body>
 </html>
