--- a/src/views/components/template.html
+++ b/src/views/components/template.html
@@ -16,5 +16,6 @@
     <script src="/assets/scripts/jquery-3.4.1.slim.min.js"></script>
     <script src="/assets/scripts/popper.min.js"></script>
     <script src="/assets/scripts/bootstrap.min.js"></script>
+    {% block scriptbottom %} {% endblock %}
 </body>
 </html>
