--- a/src/views/movies/movies.html
+++ b/src/views/movies/movies.html
@@ -9,19 +9,19 @@
         </div>
         <div class="input-group my-3">
             <div class="custom-file">
-              <input type="file" name="video" class="custom-file-input">
+              <input type="file" name="videos" class="custom-file-input" multiple>
               <label class="custom-file-label" for="inputGroupFile01">Choose Video file</label>
             </div>
         </div>
         <div class="input-group mb-3">
             <div class="custom-file">
-              <input type="file" name="cover" class="custom-file-input">
+              <input type="file" name="covers" class="custom-file-input" multiple>
               <label class="custom-file-label">Choose Cover file</label>
             </div>
         </div>
         <div class="input-group my-3">
             <div class="custom-file">
-              <input type="file" name="poster" class="custom-file-input">
+              <input type="file" name="posters" class="custom-file-input" multiple>
               <label class="custom-file-label">Choose Poster file</label>
             </div>
         </div>
