--- a/src/public/assets/css/style.css
+++ b/src/public/assets/css/style.css
@@ -1,30 +1,3 @@
-* {
-    outline: none !important;
+.upload-form {
+    max-width: 300px;
 }
-
-.movie-card {
-    max-width: 800px;
-    height: 150px;
-    background-color: #333;
-    padding: 5px;
-    margin: 5px;
-    display: flex;
-}
-.movie-card-thumbnail {
-    
-}
-.movie-card-tile {
-    color: whitesmoke;
-    font-size: 20px;
-}
-
-.movie-card-info {
-    color: gainsboro;
-    padding-left: 10px;
-    display: block;
-  width: 300px;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-
