--- a/src/views/movies/index.html
+++ b/src/views/movies/index.html
@@ -9,6 +9,10 @@
     <h5>Tooltips in a modal</h5>
     <p><a href="#" class="tooltip-test" title="Tooltip">This link</a> and <a href="#" class="tooltip-test" title="Tooltip">that link</a> have tooltips on hover.</p>
   </div>
+
+  {% for item in movies %}
+      {{item.cover}}
+  {% endfor %}
 {% endblock %}
 
     
